The weather observation in data requests is now specified as part of the url instead of as an argument. This is a better style for a REST API, and also increases separation of concerns by making the API more weewx agnostic. The weewx data binding is also specified in the URL to allow one backend to use multiple data bindings.

--- a/wxplotjs/test/dev/index.html
+++ b/wxplotjs/test/dev/index.html
@@ -24,9 +24,8 @@
       };
 
       var dataParams = {
-        type: "outTemp", 
         aggregateType: "max",
-        url: "/weewx", 
+        url: "/weewx/wxplot_binding/outTemp", 
         archiveIntervalMinutes: 5,
         minDataPoints: 25
       }
