--- a/wxplotjs/test/release/index.html
+++ b/wxplotjs/test/release/index.html
@@ -24,9 +24,8 @@
       };
 
       var dataParams = {
-        type: "outTemp", 
         aggregateType: "max",
-        url: "/weewx", 
+        url: "/weewx/wxplot_binding/outTemp", 
         archiveIntervalMinutes: 5,
         minDataPoints: 25
       }
