Moved legend into separate div and modified layout to make better use of screen space on small devices.

--- a/wxplotjs/test/index.html
+++ b/wxplotjs/test/index.html
@@ -10,8 +10,13 @@
   
   <body>
     <div id="plot" class="portrait">
-      <div id="plot-controls"></div>
-      <div id="plot-canvas"></div>
+      <div id="top">
+        <div id="plot-controls"></div>
+        <div id="plot-canvas"></div>
+      </div>
+      <div id="bottom">
+        <div id="plot-legend"></div>
+      </div>
     </div>
     <div id="viewport-ruler"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
