--- a/wxplotjs/test/index.html
+++ b/wxplotjs/test/index.html
@@ -11,14 +11,20 @@
   <body>
     <div id="plot" class="portrait">
       <div id="top">
-        <div id="plot-controls"></div>
+        <div id="plot-controls" class="overflow-scroll">
+          <div>
+            <button id="plot-hide-controls">Settings ▾</button>
+          </div>
+          <div id="plot-hideable-controls-positioner"> 
+            <div id="plot-hideable-controls" class="hide-controls"></div>
+          </div>
+        </div>
         <div id="plot-canvas"></div>
       </div>
       <div id="bottom">
         <div id="plot-legend"></div>
       </div>
     </div>
-    <div id="viewport-ruler"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.5/moment-timezone-with-data-2010-2020.min.js"></script>
