Fixed layout problems on Safari

--- a/wxplotjs/test/index.html
+++ b/wxplotjs/test/index.html
@@ -19,7 +19,9 @@
             <div id="plot-hideable-controls" class="hide-controls"></div>
           </div>
         </div>
-        <div id="plot-canvas"></div>
+        <div id="plot-canvas-outer">
+          <div id="plot-canvas-inner"></div>
+        </div>
       </div>
       <div id="bottom">
         <div id="plot-legend"></div>
