--- a/wxplotjs/test/index.html
+++ b/wxplotjs/test/index.html
@@ -16,7 +16,9 @@
             <button id="plot-hide-controls">Settings ▾</button>
           </div>
           <div id="plot-hideable-controls-positioner"> 
-            <div id="plot-hideable-controls" class="hide-controls"></div>
+            <div id="plot-hideable-controls" class="hide-controls">
+              <div id="plot-trace-select"></div>
+            </div>
           </div>
         </div>
         <div id="plot-canvas-outer">
@@ -30,6 +32,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.5/moment-timezone-with-data-2010-2020.min.js"></script>
-    <script src="wxplot-test.js"></script>
+    <script src="wxplot.js"></script>
   </body>
 </html>
