--- a/wxplotjs/public/index.html
+++ b/wxplotjs/public/index.html
@@ -9,6 +9,7 @@
   </head>
   
   <body>
+    <div id="react"></div>
     <div id="app-container">
       <div id="top">
         <div id="controls" class="overflow-scroll">
@@ -32,6 +33,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.5/moment-timezone-with-data-2010-2020.min.js"></script>
-    <script src="wxplot.js"></script>
   </body>
 </html>
